# OpenGL_linux

./: CMakeLists.txt
glad/: glad.c
glad/include/glad/: glad.h
glfw/: libglfw.so.3
opengl/: Shader.h  basic_3d.cpp  basic_texture.cpp  basic_transform.cpp  basic_uniform.cpp
test/: simple.cpp
